[gd_scene load_steps=14 format=3 uid="uid://d0gurqoqiywqv"]

[ext_resource type="Script" uid="uid://b5d8co16fdl76" path="res://scripts/plant.gd" id="1_3bbf0"]
[ext_resource type="Texture2D" uid="uid://cuppbj5f5ig6e" path="res://sprites/plant_hole3.png" id="2_3bbf0"]
[ext_resource type="Texture2D" uid="uid://c3x7rrllighv8" path="res://sprites/Crop_Spritesheet_Page_Item(1).png" id="3_t1mub"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mncn7"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bbf0"]
atlas = ExtResource("3_t1mub")
region = Rect2(96, 0, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j4ds"]
atlas = ExtResource("3_t1mub")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opr0j"]
atlas = ExtResource("3_t1mub")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeikq"]
atlas = ExtResource("3_t1mub")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwpwd"]
atlas = ExtResource("3_t1mub")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nli44"]
atlas = ExtResource("3_t1mub")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5vxm"]
atlas = ExtResource("3_t1mub")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_t1mub"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bbf0")
}],
"loop": true,
"name": &"collected",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6j4ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opr0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeikq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwpwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nli44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5vxm")
}],
"loop": false,
"name": &"grow",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3bbf0")
}],
"loop": true,
"name": &"planted",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6j4ds"]
size = Vector2(16, 16)

[node name="Plant" type="StaticBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_3bbf0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mncn7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3.874302e-07, 3.874302e-07)
scale = Vector2(0.50000006, 0.50000006)
sprite_frames = SubResource("SpriteFrames_t1mub")
animation = &"collected"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_6j4ds")
debug_color = Color(0.9462299, 0.1233769, 0.49808854, 0.41960785)

[node name="StartTimer" type="Timer" parent="."]

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
